Fixed host account categories image upload, remove div from host dashboard code behind

--- a/RoomMagnet/style.css
+++ b/RoomMagnet/style.css
@@ -192,11 +192,11 @@ div.container-fluid.homepageAbove {
     max-width: auto;
 }
 
-.aboutusInfoBox {
+/*.aboutusInfoBox {
     background-color: #BDD5EA;
     border-left: 19px solid #fff;
     border-radius: 10px;
-}
+}*/
 
 .howItWorksBox {
     padding-top: 14px;
@@ -206,11 +206,11 @@ div.container-fluid.homepageAbove {
         color: #577399;
     }
 
-.oldandYoungImage {
+/*.oldandYoungImage {
     background-image: url("../images/young-teaching-old.jpg");
     background-size: 100%;
     background-position: cover;
-}
+}*/
 
 .roomimagehomepage {
     background-image: url(../images/loft-style-bedroom.jpg);
@@ -1145,7 +1145,10 @@ button.btn-yes-go {
     }
 
     .aboutusInfoBox {
+       
         background-color: #BDD5EA;
+        border-left: 19px solid #fff;
+        border-radius: 10px
     }
 
     .howItWorksBox {
@@ -1242,7 +1245,10 @@ button.btn-yes-go {
     }
 
     .aboutusInfoBox {
+        height: 300px;
         background-color: #BDD5EA;
+        border-left: 19px solid #fff;
+        border-radius: 10px;
     }
 
     .howItWorksBox {
@@ -7641,11 +7647,15 @@ button.bg-dark:focus {
     border-radius: 50% !important;
 }
 
-.rounded-circle-header {
+.rounded-circle-headerrm {
     float: left;
     border-radius: 50% !important;
-    width:40%;
-    height:auto;
+    width: 10%;
+    height: auto;
+    /*float: left;
+    border-radius: 50% !important;
+    width: 40%;
+    height: auto;*/
 }
 
 .rounded-pill {
